# ChangeLog for media-fonts/wqy-zenhei
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/wqy-zenhei/ChangeLog,v 1.4 2009/01/01 04:15:17 matsuu Exp $

*wqy-zenhei-0.8.34_p20081027 (01 Jan 2009)

  01 Jan 2009; MATSUU Takuto <matsuu@gentoo.org>
  +wqy-zenhei-0.8.34_p20081027.ebuild:
  Version bumped. Fixed HOMEPAGE.

  25 Sep 2008; Alexis Ballier <aballier@gentoo.org>
  wqy-zenhei-0.6.26.ebuild:
  keyword ~x86-fbsd thanks to Hong Hao <oahong@gmail.com>, bug #236042

*wqy-zenhei-0.6.26 (26 Jun 2008)

  26 Jun 2008; Peter Alfredsen <loki_val@gentoo.org>
  -wqy-zenhei-0.5.23.ebuild, +wqy-zenhei-0.6.26.ebuild:
  Bump. Thanks dirtyepic.

*wqy-zenhei-0.5.23 (25 May 2008)

  25 May 2008; Ryan Hill <dirtyepic@gentoo.org> +metadata.xml,
  +wqy-zenhei-0.5.23.ebuild:
  Initial import for bug #192781. Based on ebuild by Hong Hao.
