@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/wqy-zenhei
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/wqy-zenhei/ChangeLog,v 1.4 2009/01/01 04:15:17 matsuu Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/wqy-zenhei/ChangeLog,v 1.5 2009/01/14 00:39:13 josejx Exp $
+
+  14 Jan 2009; Joseph Jezak <josejx@gentoo.org> wqy-zenhei-0.6.26.ebuild,
+  wqy-zenhei-0.8.34_p20081027.ebuild:
+  Marked ~ppc/~ppc64 for bug #254379.
 
 *wqy-zenhei-0.8.34_p20081027 (01 Jan 2009)
 
